// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Assignment Pattern 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "number",
              },
            ],
            "returnType": Object {
              "kind": "number",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`BooleanLiteralTypeAnnotation 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "string",
              },
            ],
            "returnType": Object {
              "kind": "boolean",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`NullLiteralTypeAnnotation 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "null",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`array expression 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "typeParams": Array [
              Object {
                "kind": "typeParam",
                "type": Object {
                  "kind": "string",
                },
              },
            ],
            "value": Object {
              "kind": "id",
              "name": "Array",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`arrow function expression 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [],
            "returnType": Object {
              "kind": "mixed",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`binary expression 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`boolean literal 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`defined member expression 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [],
            "returnType": Object {
              "kind": "mixed",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`exists type annotation 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [],
            "returnType": Object {
              "kind": "mixed",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow any 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "age",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "any",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow array 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "typeParams": Array [
              Object {
                "kind": "typeParam",
                "type": Object {
                  "kind": "boolean",
                },
              },
            ],
            "value": Object {
              "kind": "id",
              "name": "Array",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow array union 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "typeParams": Array [
              Object {
                "kind": "typeParam",
                "type": Object {
                  "kind": "union",
                  "types": Array [
                    Object {
                      "kind": "boolean",
                    },
                    Object {
                      "kind": "number",
                    },
                  ],
                },
              },
            ],
            "value": Object {
              "kind": "id",
              "name": "Array",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow boolean 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow different React component 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": true,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "FooComponent",
        "type": null,
      },
    },
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": true,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "BarComponent",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow exported type alias reference 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "boolean",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow function 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "string",
              },
              Object {
                "kind": "number",
              },
            ],
            "returnType": Object {
              "kind": "string",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow function named params 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "string",
              },
              Object {
                "kind": "number",
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow function return type 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "number",
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow function type 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "id",
              "name": "Function",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow function unnamed params 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "string",
              },
              Object {
                "kind": "number",
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow function unnamed params w/ object 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [
              Object {
                "kind": "object",
                "members": Array [
                  Object {
                    "key": Object {
                      "kind": "id",
                      "name": "prop",
                    },
                    "kind": "property",
                    "optional": false,
                    "value": Object {
                      "kind": "string",
                    },
                  },
                ],
              },
            ],
            "returnType": Object {
              "kind": "void",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow generic class 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "generic",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "value": Object {
        "kind": "id",
        "name": "A",
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow import { type } 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "generic",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "value": Object {
        "kind": "object",
        "members": Array [
          Object {
            "key": Object {
              "kind": "id",
              "name": "children",
            },
            "kind": "property",
            "optional": false,
            "value": Object {
              "kind": "generic",
              "value": Object {
                "importKind": "type",
                "kind": "import",
                "moduleSpecifier": "react",
                "name": "Node",
              },
            },
          },
        ],
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow maybe 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "arguments": Object {
              "kind": "string",
            },
            "kind": "nullable",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow mixed 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "age",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "mixed",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow no React component 1`] = `
Object {
  "classes": Array [],
  "kind": "program",
}
`;

exports[`flow number 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow optional 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": true,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow string 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow type 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "generic",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "value": Object {
        "kind": "object",
        "members": Array [
          Object {
            "key": Object {
              "kind": "id",
              "name": "foo",
            },
            "kind": "property",
            "optional": false,
            "value": Object {
              "kind": "number",
            },
          },
          Object {
            "key": Object {
              "kind": "id",
              "name": "bar",
            },
            "kind": "property",
            "optional": false,
            "value": Object {
              "kind": "boolean",
            },
          },
        ],
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow type 2`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "intersection",
            "types": Array [
              Object {
                "kind": "number",
              },
              Object {
                "kind": "string",
              },
            ],
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow type identifier 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "generic",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "value": Object {
        "kind": "object",
        "members": Array [
          Object {
            "key": Object {
              "kind": "id",
              "name": "children",
            },
            "kind": "property",
            "optional": false,
            "value": Object {
              "kind": "generic",
              "value": Object {
                "kind": "id",
                "name": "Node",
              },
            },
          },
        ],
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow union 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "union",
            "types": Array [
              Object {
                "kind": "boolean",
              },
              Object {
                "kind": "number",
              },
            ],
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow union literals 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "age",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "union",
            "types": Array [
              Object {
                "kind": "stringLiteral",
                "value": "25",
              },
              Object {
                "kind": "numberLiteral",
              },
            ],
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`flow void 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "void",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`function expression 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [],
            "returnType": Object {
              "kind": "mixed",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`imported member expression default 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [],
            "returnType": Object {
              "kind": "mixed",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`imported member expression named 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [],
            "returnType": Object {
              "kind": "mixed",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`imported member expression named alias 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [],
            "returnType": Object {
              "kind": "mixed",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`intersection type 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "intersection",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "types": Array [
        Object {
          "kind": "generic",
          "value": Object {
            "kind": "object",
            "members": Array [
              Object {
                "key": Object {
                  "kind": "id",
                  "name": "bar",
                },
                "kind": "property",
                "optional": false,
                "value": Object {
                  "kind": "string",
                },
              },
            ],
          },
        },
        Object {
          "kind": "object",
          "members": Array [
            Object {
              "key": Object {
                "kind": "id",
                "name": "isDefaultChecked",
              },
              "kind": "property",
              "optional": false,
              "value": Object {
                "kind": "boolean",
              },
            },
          ],
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`member expression 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [],
            "returnType": Object {
              "kind": "mixed",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`non-standard key 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "string",
            "value": "ab-a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`null literal 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": true,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`numeric literal 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`spread element  1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
        Object {
          "key": Object {
            "kind": "id",
            "name": "b",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "boolean",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`string literal 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`tagged template expression 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "function",
            "parameters": Array [],
            "returnType": Object {
              "kind": "mixed",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`test 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "foo",
          },
          "kind": "property",
          "optional": true,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "kind": "id",
              "name": "Object",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`test defaultProp as JSXElement 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "importKind": "type",
              "kind": "import",
              "moduleSpecifier": "react",
              "name": "Node",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`test defaultProp as JSXElement with JSXExpressionContainer 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "importKind": "type",
              "kind": "import",
              "moduleSpecifier": "react",
              "name": "Node",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`test defaultProp as JSXElement with member expression 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "importKind": "type",
              "kind": "import",
              "moduleSpecifier": "react",
              "name": "Node",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`test defaultProp as JSXElement with multiple props 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "generic",
            "value": Object {
              "importKind": "type",
              "kind": "import",
              "moduleSpecifier": "react",
              "name": "Node",
            },
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`test get defaultProps 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "string",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`ts any 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "any",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts array 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "id",
          "name": "Array",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts boolean 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "boolean",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts different React components 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "FooComponent",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "void",
        },
      ],
    },
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "BarComponent",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "void",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts enum 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "id",
          "name": "Color",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts function 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "function",
          "parameters": Array [
            Object {
              "kind": "id",
              "name": "string",
            },
            Object {
              "kind": "id",
              "name": "boolean",
            },
          ],
          "returnType": Object {
            "kind": "number",
          },
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts interface 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "id",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`ts literals 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "union",
          "types": Array [
            Object {
              "kind": "literal",
              "value": "25",
            },
            Object {
              "kind": "literal",
              "value": 30,
            },
          ],
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts no react component 1`] = `
Object {
  "classes": Array [],
  "kind": "program",
}
`;

exports[`ts object 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "object",
          "props": Array [
            Object {
              "kind": "string",
            },
          ],
        },
        Object {
          "kind": "number",
        },
        Object {
          "kind": "boolean",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts optional 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "string",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts string 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "string",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts tuple 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "tuple",
          "types": Array [
            Object {
              "kind": "string",
            },
            Object {
              "kind": "number",
            },
          ],
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts union 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "union",
          "types": Array [
            Object {
              "kind": "number",
            },
            Object {
              "kind": "string",
            },
          ],
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`ts void 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "props": Array [
        Object {
          "kind": "void",
        },
      ],
    },
  ],
  "kind": "program",
}
`;

exports[`unary operator 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "object",
      "members": Array [
        Object {
          "key": Object {
            "kind": "id",
            "name": "a",
          },
          "kind": "property",
          "optional": false,
          "value": Object {
            "kind": "number",
          },
        },
      ],
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
    },
  ],
  "kind": "program",
}
`;

exports[`with spread in type annotation 1`] = `
Object {
  "classes": Array [
    Object {
      "kind": "generic",
      "name": Object {
        "kind": "id",
        "name": "Component",
        "type": null,
      },
      "value": Object {
        "kind": "object",
        "members": Array [
          Object {
            "kind": "spread",
            "value": Object {
              "kind": "generic",
              "value": Object {
                "kind": "object",
                "members": Array [
                  Object {
                    "key": Object {
                      "kind": "id",
                      "name": "foo",
                    },
                    "kind": "property",
                    "optional": false,
                    "value": Object {
                      "kind": "string",
                    },
                  },
                ],
              },
            },
          },
          Object {
            "key": Object {
              "kind": "id",
              "name": "isDefaultChecked",
            },
            "kind": "property",
            "optional": false,
            "value": Object {
              "kind": "boolean",
            },
          },
        ],
      },
    },
  ],
  "kind": "program",
}
`;
